# ClaudeMaster

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: auto-release.yml  ci.yml  release.yml  version-bump.yml
daemon/: Cargo.toml
daemon/src/: claude.rs  claude_resolver.rs  config.rs  hook_listener.rs  hook_manager.rs  ipc.rs  main.rs  pty.rs  session_manager.rs  state.rs  status_tracker.rs
docs/designs/: 2026-01-01-auto-update-design.md  2026-01-01-persistent-daemon-design.md
docs/plans/: 2025-12-29-agent-deck-implementation.md  2025-12-29-agent-deck-native-design.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  index.css  types.ts
gui/src-tauri/: Cargo.toml  build-sidecar.mjs  build-sidecar.ps1  build-sidecar.sh  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  daemon_launcher.rs  event_listener.rs  ipc_client.rs  lib.rs  main.rs
gui/src/components/: ContextMenu.tsx  EditGroupDialog.tsx  EditSessionDialog.tsx  NewGroupDialog.tsx  NewSessionDialog.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  StatusPill.tsx  Terminal.tsx  Toast.tsx
gui/src/hooks/: useKeyboardShortcuts.ts
gui/src/stores/: appStore.ts  terminalStore.ts
scripts/: build-release.sh  build.bat  build.sh  dev.sh  version.sh
shared/: Cargo.toml
shared/src/: group.rs  lib.rs  paths.rs  protocol.rs  session.rs
