[package]
name = "agent-deck-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-deck-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

shared = { path = "../shared" }
portable-pty = "0.8"
interprocess = { version = "2", features = ["tokio"] }
directories = "5"
anyhow = "1"
base64 = "0.22"
