[package]
name = "claude-master-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-master-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

shared = { path = "../shared" }
portable-pty = "0.8"
interprocess = { version = "2", features = ["tokio"] }
directories = "5"
anyhow = "1"
base64 = "0.22"
regex = "1"
dirs = "5"
whoami = "1"
itertools = "0.14.0"
which = "7"
lazy_static = "1.5"
glob = "0.3"
