[package]
name = "agent-deck-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "agent_deck_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
shared = { path = "../../shared" }
interprocess = { version = "2", features = ["tokio"] }
