[package]
name = "claude-master-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "claude_master_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../../shared" }
interprocess = { version = "2", features = ["tokio"] }
tauri-plugin-dialog = "2.4.2"
dirs = "5"
sha2 = "0.10"
anyhow = "1"
